--- a/headfooter.css
+++ b/headfooter.css
@@ -1,6 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 /*  Head start here */
 body{
     background-color: aliceblue;
+    margin: 0px;
+    padding: 0px;
+    /* font-size:17px; */
+    font-size: 1.2rem;
+    font-family: 'Lato', sans-serif;
+}
+header{
+    width: 100%;
+    height:5rem;
+    position:sticky;
+    top:0px;
+    background-color:#143642;
+    box-shadow: 0 0 5px 1px white;
 }
 .head,footer{
     display:flex;
@@ -9,44 +24,48 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-header{
-    position:sticky;
-    top:0px;
-    background-color:aliceblue ;
-}
 .logo{
-    width:70px;
-    height:70px;
-    border-radius:90%;
+    width:75px;
+    height:75px;
+    border-radius:50%;
+    padding:5px 10px;
 }
 h1{
-    color:rgb(44, 55, 75);
-    padding-left:15px;
+    color:White;
+    padding-left: 5px; 
+}
+nav{
+    margin-right: 200px;
 }
 nav>a{
     text-decoration: none;
-    color: rgb(44, 55, 75);
+    color:white;
     font-size:25px;
     padding:2px 25px;
 }
-nav{
-    box-shadow: 0 0 3px;  
-    margin-right: 130px;  
+nav>a:hover{
+    background-color: white;
+    color:#143642;
 }
 
 /*  Head End here */
 
 /*  Footer start here */
 footer{
-    background-color: rgb(44, 55, 75);
+    margin-top: 15px;
+    background-color:#143642;
     color:white;
     justify-content:space-around;
-    padding:60px 30px;
-    
+    padding:70px 30px;    
+}
+.footer-1{
+    color:white;
+    line-height: 1.8;
 }
 .copy-right{
-    color: rgb(23, 40, 71);
+    color:#143642;
     text-align: center;
     font-size: 20px;
+    font-weight: 700;
 }
 /*  Footer end here */
