--- a/index.css
+++ b/index.css
@@ -1,40 +1,158 @@
-body{
-    background-image: url("Images/login bg.jpg");
-    background-size:100%; 
-}
-h2{
-    color:brown;
-    padding-left: 40px;
-}
-label{
-    color:brown;
-    font-size: 17px;
-}
-.login{
-    text-decoration:none;
+.container-1{
+    height:500px;
+    width:95;
+    background-image: url("Images/gym.webp");
+    background-size:100% 100%;
     color:white;
-    background-color:brown;
-    font-size:16px;
-    padding:3px 60px;
+    padding-left:70px;
+    padding-top:200px;
+    display:flex;
+    flex-direction: column;
 }
-.forget-pass{
-    text-decoration:none;
-    color:white;
-    padding-left:56px;
+.container-1-a{
+   font-size:60px;
+   font-weight:bolder;
 }
-.signup{
-    text-decoration:none;
-    color:white;
+.container-1-b{
+    font-size:25px;
 }
-.container{
-    padding-left:600px;
-    padding-top:100px;
-}  
-.contain{
-    background-image: url("Images/login bg.jpg");
+.container-1-c{
+    text-align: center;
+    width:13rem;
+    font-size:19px;
+    display:inline;
+    padding:20px 40px;
+    background-color: #143642ed;
     
 }
-p{
-    color:brown;
+.container-2{
+    display:flex;
+}
+.container-2-a{
+    width:50%;
+    padding:60px 100px;
+    text-align:justify;
+    display: flex;
+    flex-direction: column;
+}
+.container-2-b{
+    display:flex;
+    width:50%;
+    /* justify-content: center;
+    align-items: center; */
+}
+.container-2-b>img{
+    padding-top:60px;
+    width:80%;
+    height:80%;
 }
 
+.container-3{
+    background-color:#cff0fc;
+    height:340px;
+    padding-top: 30px;
+}
+.container-3 > h2{
+    color:#143642;
+    text-align: center;;
+} 
+.container-3-a{
+    display:flex;
+    justify-content: space-between;
+}
+.container-3-a > div{
+    padding:0px 100px;
+    text-align:center;
+}
+.container-3-a > div > h2{
+    color:#143642;
+}
+.container-3-a-1{
+    width:33%;
+}
+.pic{
+    width:70px;
+    height:60px
+}
+.container-4{
+    display:flex;
+    padding-top:20px;
+}
+.container-4-a{
+    width:50%;
+    height:500px;
+    border-radius:0% 50% 50% 0%;
+    
+}
+.container-4-b{
+    padding-top:210px;
+    padding-left:100px;
+}
+.container-4-b > a{
+    background-color:#143642;
+    font-size:27px;
+    color:white;
+    padding:20px 40px;
+    text-decoration: none;
+}
+.container-4-b >a:hover{
+    background-color: #7ecdef;
+    color:#143642;
+}
+.container-5{
+    display:flex;
+    background-color:#cff0fc;
+}
+.container-5-a{
+    width:50%;
+    padding-top:210px;
+    padding-left:280px;
+}
+.container-5-a >a{
+    background-color:#143642;
+    font-size:27px;
+    color:white;
+    padding:20px 40px;
+    text-decoration: none;
+}
+.container-5-b{
+    width:50%;
+    height:500px;
+    border-radius:50% 0% 0% 50%;
+}
+.container-5-a > a:hover{
+    background-color: #7ecdef;
+    color:#143642;
+}
+.gallery{
+    color:#143642;
+    text-align:center;
+    font-size:35px;
+    text-decoration: underline;
+}
+.container-6-a{
+    display: grid;
+    gap:8px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 20rem;
+    padding: 0 5px;
+}
+.box{
+    background-size:cover;
+    background-position: top;
+    background-color: #222;
+    background-blend-mode:overlay;
+    transition: all 1s ease-in-out;
+}
+.row-2{
+    grid-row:span 2;
+}
+
+.col-2{
+    grid-column:span 2;
+}
+.box:hover{
+    background-color:transparent;
+    background-position: center;
+    box-shadow: 0 0 4px white;
+}
