--- a/headfooter.css
+++ b/headfooter.css
@@ -1,71 +1,114 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+*{
+    padding: 0;
+    margin:0;
+    font-family: "Lato", sans-serif;
+}
 
-/*  Head start here */
-body{
+/* For desktop screen  */
+  body {
     background-color: aliceblue;
-    margin: 0px;
-    padding: 0px;
-    /* font-size:17px; */
-    font-size: 1.2rem;
-    font-family: 'Lato', sans-serif;
-}
-header{
+  }
+  /* Header start here  */
+  header {
     width: 100%;
-    height:5rem;
-    position:sticky;
-    top:0px;
-    background-color:#143642;
+    height: 5rem;
+    position: sticky;
+    top: 0px;
+    background-color: #143642;
     box-shadow: 0 0 5px 1px white;
-}
-.head,footer{
-    display:flex;
-}
-.head{
+  }
+  .head,
+  footer {
+    display: flex;
+  }
+  .head {
     justify-content: space-between;
     align-items: center;
-}
-.logo{
-    width:75px;
-    height:75px;
-    border-radius:50%;
-    padding:5px 10px;
-}
-h1{
-    color:White;
-    padding-left: 5px; 
-}
-nav{
-    margin-right: 200px;
-}
-nav>a{
+  }
+  h1 {
+    color: White;
+    padding-left: 15px;
+  }
+  nav {
+    margin-right: 15%;
+  }
+  nav > a {
     text-decoration: none;
-    color:white;
-    font-size:25px;
-    padding:2px 25px;
-}
-nav>a:hover{
+    color: white;
+    font-size: 25px;
+    padding: 2px 25px;
+    transition: 0.3s;
+  }
+  nav > a:hover {
     background-color: white;
-    color:#143642;
-}
+    color: #143642;
+  }
+ /*  Head End here */
 
-/*  Head End here */
-
-/*  Footer start here */
-footer{
+  /*  Footer start here */
+  footer {
     margin-top: 15px;
-    background-color:#143642;
-    color:white;
-    justify-content:space-around;
-    padding:70px 30px;    
-}
-.footer-1{
-    color:white;
+    background-color: #143642;
+    color: white;
+    justify-content: space-around;
+    padding: 70px 30px;
+  }
+  .footer-1 {
+    color: white;
     line-height: 1.8;
-}
-.copy-right{
-    color:#143642;
+  }
+  .copy-right {
+    color: #143642;
     text-align: center;
     font-size: 20px;
     font-weight: 700;
-}
+  }
 /*  Footer end here */
+
+
+/* For mobile phone screen  */
+@media screen and (max-width: 813px) {
+  /* header start here  */
+  header {
+    width: 100%;
+    height: 5rem;
+  }
+  .head,footer{
+    flex-direction: column;
+  }
+  .head {
+    justify-content: space-around;
+  }
+  h1{
+    font-size: large;
+  }
+  nav {
+    margin-right:0;
+  }
+  nav > a {
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    padding:0 40px;
+    transition: 0.3s;
+  }
+  /*  Head End here */
+ 
+  /*  Footer start here */
+  footer {
+    text-align: center;
+    gap:2rem;
+  }
+  footer >div >h2{
+    font-size: medium;
+  }
+  .footer-1 {
+    font-size:12px;
+    line-height: 1.3rem;
+  }
+  .copy-right {
+    font-size: 12px;
+  }
+/*  Footer end here */
+}
