--- a/index.css
+++ b/index.css
@@ -1,158 +1,272 @@
-.container-1{
-    height:500px;
-    width:95;
-    background-image: url("Images/gym.webp");
-    background-size:100% 100%;
-    color:white;
-    padding-left:70px;
-    padding-top:200px;
-    display:flex;
-    flex-direction: column;
+/* For desktop screens */
+.container-1 {
+  height: 500px;
+  width: 95;
+  background-image: url("Images/gym.webp");
+  background-size: 100% 100%;
+  color: white;
+  padding:100px 70px;
+  display: flex;
+  flex-direction: column;
+  line-height: 6rem;
 }
-.container-1-a{
-   font-size:60px;
-   font-weight:bolder;
+.container-1-a {
+  font-size: 60px;
+  font-weight: bolder;
 }
-.container-1-b{
-    font-size:25px;
+.container-1-b {
+  font-size: 25px;
 }
-.container-1-c{
-    text-align: center;
-    width:13rem;
-    font-size:19px;
-    display:inline;
-    padding:20px 40px;
-    background-color: #143642ed;
-    
+.container-1-c {
+  background-color: #143642ed;
+  width: 14rem;
+  text-align: center;
+  font-size: 23px;
+  padding: 0 20px;
+  height: auto;
 }
-.container-2{
-    display:flex;
+.container-2 {
+  display: flex;
 }
-.container-2-a{
-    width:50%;
-    padding:60px 100px;
-    text-align:justify;
+.container-2-a {
+  width: 50%;
+  padding: 60px 100px;
+  text-align: justify;
+  display: flex;
+  flex-direction: column;
+}
+.container-2-b {
+  display: flex;
+  width: 50%;
+}
+.container-2-b > img {
+  padding-top: 60px;
+  width: 80%;
+  height: 80%;
+}
+
+.container-3 {
+  background-color: #cff0fc;
+  height: 340px;
+  padding-top: 30px;
+}
+.container-3 > h2 {
+  color: #143642;
+  text-align: center;
+}
+.container-3-a {
+  display: flex;
+  justify-content: space-between;
+}
+.container-3-a > div {
+  padding: 0px 100px;
+  text-align: center;
+}
+.container-3-a > div > h2 {
+  color: #143642;
+}
+.container-3-a-1 {
+  width: 33%;
+}
+.pic {
+  width: 70px;
+  height: 60px;
+}
+.container-4 {
+  display: flex;
+  padding-top: 20px;
+}
+.container-4-a {
+  width: 50%;
+  height: 500px;
+  border-radius: 0% 50% 50% 0%;
+}
+.container-4-b {
+  width:50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container-4-b > a {
+  background-color: #143642;
+  font-size: 27px;
+  color: white;
+  padding: 20px 40px;
+  text-decoration: none;
+  border-radius: 20px;
+}
+.container-4-b > a:hover {
+  background-color: #7ecdef;
+  color: #143642;
+}
+.container-5 {
+  display: flex;
+  background-color: #cff0fc;
+}
+.container-5-a {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container-5-a > a {
+  background-color: #143642;
+  font-size: 27px;
+  color: white;
+  padding: 20px 40px;
+  text-decoration: none;
+  border-radius: 20px;
+}
+.container-5-b {
+  width: 50%;
+  height: 500px;
+  border-radius: 50% 0% 0% 50%;
+}
+.container-5-a > a:hover {
+  background-color: #7ecdef;
+  color: #143642;
+}
+.gallery {
+  color: #143642;
+  text-align: center;
+  font-size: 35px;
+  text-decoration: underline;
+}
+.container-6-a {
+  display: grid;
+  gap: 4px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 20rem;
+  padding: 0 5px;
+}
+.grid-cover {
+  background-size: cover;
+  background-position: top;
+  background-color: #222;
+  background-blend-mode: overlay;
+  transition: all 1s ease-in-out;
+}
+.row-2 {
+  grid-row: span 2;
+}
+
+.col-2 {
+  grid-column: span 2;
+}
+.box:hover {
+  background-color: transparent;
+  background-position: center;
+  box-shadow: 0 0 4px white;
+}
+
+/* for Mobile screens */
+@media screen and (max-width:813px){
+  .container-1 {
+    height:auto;
+    line-height: 3rem;
+  }
+  .container-1-a {
+    font-size: 25px;
+  }
+  .container-1-b {
+    font-size: 13px;
+  }
+  .container-1-c {
+    width: 10rem;
+    font-size: 15px;
+    height: auto;
+  }
+  .container-2 {
     display: flex;
     flex-direction: column;
-}
-.container-2-b{
-    display:flex;
-    width:50%;
-    /* justify-content: center;
-    align-items: center; */
-}
-.container-2-b>img{
-    padding-top:60px;
-    width:80%;
-    height:80%;
-}
-
-.container-3{
-    background-color:#cff0fc;
-    height:340px;
-    padding-top: 30px;
-}
-.container-3 > h2{
-    color:#143642;
-    text-align: center;;
-} 
-.container-3-a{
-    display:flex;
-    justify-content: space-between;
-}
-.container-3-a > div{
-    padding:0px 100px;
-    text-align:center;
-}
-.container-3-a > div > h2{
-    color:#143642;
-}
-.container-3-a-1{
-    width:33%;
-}
-.pic{
-    width:70px;
-    height:60px
-}
-.container-4{
-    display:flex;
-    padding-top:20px;
-}
-.container-4-a{
-    width:50%;
-    height:500px;
-    border-radius:0% 50% 50% 0%;
-    
-}
-.container-4-b{
-    padding-top:210px;
-    padding-left:100px;
-}
-.container-4-b > a{
-    background-color:#143642;
-    font-size:27px;
-    color:white;
-    padding:20px 40px;
-    text-decoration: none;
-}
-.container-4-b >a:hover{
-    background-color: #7ecdef;
-    color:#143642;
-}
-.container-5{
-    display:flex;
-    background-color:#cff0fc;
-}
-.container-5-a{
-    width:50%;
-    padding-top:210px;
-    padding-left:280px;
-}
-.container-5-a >a{
-    background-color:#143642;
-    font-size:27px;
-    color:white;
-    padding:20px 40px;
-    text-decoration: none;
-}
-.container-5-b{
-    width:50%;
-    height:500px;
-    border-radius:50% 0% 0% 50%;
-}
-.container-5-a > a:hover{
-    background-color: #7ecdef;
-    color:#143642;
-}
-.gallery{
-    color:#143642;
-    text-align:center;
-    font-size:35px;
-    text-decoration: underline;
-}
-.container-6-a{
+  }
+  .container-2-a {
+    width: 90%;
+    margin: auto;
+    padding:0;
+    padding-top:40px;
+    text-align: justify;
+    gap:1rem;
+  }
+  .container-2-b {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 40px;
+  }
+  .container-2-b > img {
+    width: 100%;
+    height: 100%;
+  }
+  .container-3 {
+    height: auto;
+    padding-bottom:20px; 
+  }
+  .container-3 > h2 {
+    font-size: medium;
+    margin-bottom: 15px;
+  }
+  .container-3-a {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+  .container-3-a-1 {
+    width: 70%;
+  }
+  .pic {
+    width: 60px;
+    height: 50px;
+  }
+  .container-4 {
+    flex-direction: column;
+    gap:1rem;
+    margin: 2rem 0;
+    padding: 0;
+    padding-bottom: 1rem;
+    background-color: #cff0fc;
+  }
+  .container-4-a {
+    width: 100%;
+    height:auto;
+    border-radius:0;
+  }
+  .container-4-b {
+    width:100%;
+  }
+  .container-4-b > a {
+    font-size: 20px;
+    padding: 20px 50px;
+    border-radius: 10px;
+  }
+  .container-5 {
+    flex-direction: column-reverse;
+    gap:1rem;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+  .container-5-a {
+    width: 100%;
+  }
+  .container-5-a > a {
+    font-size: 20px;
+    padding: 20px 50px;
+  }
+  .container-5-b {
+    width: 100%;
+    height: auto;
+    border-radius:0;
+  }
+  .gallery {
+    font-size: 25px;
+    padding:1rem;
+  }
+  .container-6-a {
     display: grid;
-    gap:8px;
+    gap: 4px;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 20rem;
+    grid-auto-rows: 10rem;
     padding: 0 5px;
-}
-.box{
-    background-size:cover;
-    background-position: top;
-    background-color: #222;
-    background-blend-mode:overlay;
-    transition: all 1s ease-in-out;
-}
-.row-2{
-    grid-row:span 2;
-}
-
-.col-2{
-    grid-column:span 2;
-}
-.box:hover{
-    background-color:transparent;
-    background-position: center;
-    box-shadow: 0 0 4px white;
+  }
+ 
 }
