--- a/headfooter.css
+++ b/headfooter.css
@@ -2,7 +2,24 @@
 *{
     padding: 0;
     margin:0;
+    box-sizing: border-box;
     font-family: "Lato", sans-serif;
+}
+.red-line{
+  width: 100%;
+  height:2px;
+  background-color:#143642;
+  animation: fill-color 0.5s ease-out;
+}
+@keyframes fill-color {
+  0% {
+    width:0vw;
+    background-color:red;
+  }
+  100% {
+    width:100vw;
+    background-color:red;
+  }
 }
 
 /* For desktop screen  */
@@ -82,6 +99,7 @@
   }
   h1{
     font-size: large;
+    padding-left: 5px;
   }
   nav {
     margin-right:0;
@@ -90,7 +108,7 @@
     text-decoration: none;
     color: white;
     font-size: 15px;
-    padding:0 40px;
+    padding:0 20px;
     transition: 0.3s;
   }
   /*  Head End here */
@@ -99,6 +117,7 @@
   footer {
     text-align: center;
     gap:2rem;
+    padding: 10px 0;
   }
   footer >div >h2{
     font-size: medium;
