--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,8 +1,9 @@
 /* For desktop screens */
-.container-1 {
+.containerH-1 {
   height: auto;
   width: 95;
-  background-image: url("Images/gym.webp");
+  /* background-image: url("Images/gym.webp"); */
+  background-image: url('/public/Images/gym.webp');
   background-size: 100% 100%;
   color: white;
   padding:100px 70px;
@@ -10,14 +11,14 @@
   flex-direction: column;
   line-height: 6rem;
 }
-.container-1-a {
+.containerH-1-a {
   font-size: 60px;
   font-weight: bolder;
 }
-.container-1-b {
+.containerH-1-b {
   font-size: 25px;
 }
-.container-1-c {
+.containerH-1-c {
   background-color: #143642ed;
   width: 20rem;
   text-align: center;
@@ -25,10 +26,10 @@
   padding: 0 20px;
   height: auto;
 }
-.container-2 {
+.containerH-2 {
   display: flex;
 }
-.container-2-a {
+.containerH-2-a {
   width: 50%;
   padding: 60px 100px;
   text-align: justify;
@@ -36,59 +37,59 @@
   flex-direction: column;
   gap: 2rem;
 }
-.container-2-b {
+.containerH-2-b {
   display: flex;
   width: 50%;
 }
-.container-2-b > img {
+.containerH-2-b > img {
   padding-top: 60px;
   width: 80%;
   height: 80%;
 }
 
-.container-3 {
+.containerH-3 {
   background-color: #cff0fc;
   height: 340px;
   padding-top: 30px;
 }
-.container-3 > h2 {
+.containerH-3 > h2 {
   color: #143642;
   text-align: center;
 }
-.container-3-a {
+.containerH-3-a {
   display: flex;
   justify-content: space-between;
 }
-.container-3-a > div {
+.containerH-3-a > div {
   padding: 0px 100px;
   text-align: center;
 }
-.container-3-a > div > h2 {
+.containerH-3-a > div > h2 {
   color: #143642;
 }
-.container-3-a-1 {
+.containerH-3-a-1 {
   width: 33%;
 }
 .pic {
   width: 70px;
   height: 60px;
 }
-.container-4 {
+.containerH-4 {
   display: flex;
   padding-top: 20px;
 }
-.container-4-a {
+.containerH-4-a {
   width: 50%;
   height: 500px;
   border-radius: 0% 50% 50% 0%;
 }
-.container-4-b {
+.containerH-4-b {
   width:50%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.container-4-b > a {
+.containerH-4-b > a {
   background-color: #143642;
   font-size: 27px;
   color: white;
@@ -96,21 +97,21 @@
   text-decoration: none;
   border-radius: 20px;
 }
-.container-4-b > a:hover {
+.containerH-4-b > a:hover {
   background-color: #7ecdef;
   color: #143642;
 }
-.container-5 {
+.containerH-5 {
   display: flex;
   background-color: #cff0fc;
 }
-.container-5-a {
+.containerH-5-a {
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.container-5-a > a {
+.containerH-5-a > a {
   background-color: #143642;
   font-size: 27px;
   color: white;
@@ -118,12 +119,12 @@
   text-decoration: none;
   border-radius: 10px;
 }
-.container-5-b {
+.containerH-5-b {
   width: 50%;
   height: 500px;
   border-radius: 50% 0% 0% 50%;
 }
-.container-5-a > a:hover {
+.containerH-5-a > a:hover {
   background-color: #7ecdef;
   color: #143642;
 }
@@ -135,7 +136,7 @@
   padding:10px;
   margin-top:1rem;
 }
-.container-6-a {
+.containerH-6-a {
   display: grid;
   gap: 4px;
   grid-template-columns: repeat(3, 1fr);
@@ -161,27 +162,27 @@
 
 /* for Mobile screens */
 @media screen and (max-width:813px){
-  .container-1 {
+  .containerH-1 {
     height:auto;
     line-height: 2rem;
   }
-  .container-1-a {
+  .containerH-1-a {
     font-size: 20px;
   }
-  .container-1-b {
+  .containerH-1-b {
     font-size: 13px;
   }
-  .container-1-c {
+  .containerH-1-c {
     width: 12em;
     font-size: 10px;
     height: auto;
     padding:0;
   }
-  .container-2 {
+  .containerH-2 {
     display: flex;
     flex-direction: column;
   }
-  .container-2-a {
+  .containerH-2-a {
     width: 90%;
     margin: auto;
     padding:0;
@@ -189,37 +190,37 @@
     text-align: justify;
     gap:1rem;
   }
-  .container-2-b {
+  .containerH-2-b {
     display: flex;
     justify-content: center;
     width: 100%;
     padding-bottom: 40px;
   }
-  .container-2-b > img {
+  .containerH-2-b > img {
     width: 100%;
     height: 100%;
   }
-  .container-3 {
+  .containerH-3 {
     height: auto;
     padding-bottom:20px; 
   }
-  .container-3 > h2 {
+  .containerH-3 > h2 {
     font-size: medium;
     margin-bottom: 15px;
   }
-  .container-3-a {
+  .containerH-3-a {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
   }
-  .container-3-a-1 {
+  .containerH-3-a-1 {
     width: 100%;
   }
   .pic {
     width: 50px;
     height: 40px;
   }
-  .container-4 {
+  .containerH-4 {
     flex-direction: column;
     gap:1rem;
     margin: 2rem 0;
@@ -227,33 +228,33 @@
     padding-bottom: 1rem;
     background-color: #cff0fc;
   }
-  .container-4-a {
+  .containerH-4-a {
     width: 100%;
     height:auto;
     border-radius:0;
   }
-  .container-4-b {
+  .containerH-4-b {
     width:100%;
   }
-  .container-4-b > a {
+  .containerH-4-b > a {
     font-size: 20px;
     padding: 10px;
     border-radius: 10px;
   }
-  .container-5 {
+  .containerH-5 {
     flex-direction: column-reverse;
     gap:1rem;
     padding-bottom: 1rem;
     margin-bottom: 2rem;
   }
-  .container-5-a {
+  .containerH-5-a {
     width: 100%;
   }
-  .container-5-a > a {
+  .containerH-5-a > a {
     font-size: 20px;
     padding: 10px 30px;
   }
-  .container-5-b {
+  .containerH-5-b {
     width: 100%;
     height: auto;
     border-radius:0;
@@ -261,7 +262,7 @@
   .gallery {
     font-size: 25px;
   }
-  .container-6-a {
+  .containerH-6-a {
     display: grid;
     gap: 4px;
     grid-template-columns: repeat(3, 1fr);
