--- a/src/Styles/headfooter.css
+++ b/src/Styles/headfooter.css
@@ -29,7 +29,7 @@ body {
 /* Header start here  */
 header {
   width: 100%;
-  height: 5rem;
+  height: 4rem;
   position: sticky;
   top: 0px;
   background-color: #143642;
@@ -47,6 +47,8 @@ footer {
 h1 {
   color: White;
   padding-left: 15px;
+  font-size: 30px;
+  font-style: italic;
 }
 nav {
   margin-right: 15%;
@@ -54,7 +56,7 @@ nav {
 .navbar-color {
   text-decoration: none;
   color: white;
-  font-size: 25px;
+  font-size: 19px;
   padding: 2px 30px;
   transition: 0.3s;
 }
